fix(gateway): green Java storage ITs and shrink allowlist
Cache or synthesize proto descriptors for JsonStreamWriter AppendRows,
wire the emulator BigQueryWriteClient into WriteBufferedStream, and add
Arrow JVM opens for Failsafe. Remove WriteBufferedStreamIT and
StorageArrowSampleIT from JAVA_BQ_ALLOW_FAILING_ITS; update ENGINE_POLICY
and orchestration tracker for thirdparty exit 0.

Co-authored-by: Cursor <cursoragent@cursor.com>